force-app/main/default/objects/Deal_Sheet__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Sheets</relationshipLabel>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>