force-app/main/default/objects/Deal_Sheet__c/fields/Company_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Company_Health_Insurance__c</fullName>
    <label>Company Health Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>