force-app/main/default/objects/Deal_Sheet__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Deal Sheets</relationshipLabel>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>