force-app/main/default/objects/Deal_Sheet__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>