force-app/main/default/objects/Deal_Sheet__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Deal Sheets</relationshipLabel>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>