force-app/main/default/objects/Deal_Sheet__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>