force-app/main/default/objects/Deal_Sheet__c/fields/Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Hours__c</fullName>
    <label>Weekly Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>