force-app/main/default/objects/Deal_Sheet__c/validationRules/Lock_Financials_Post_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Financials_Post_Approval</fullName>
    <active>false</active>
    <description>Prevents users from changing critical financial and date fields once the Deal Sheet has been Approved by the Director.</description>
    <errorConditionFormula>AND(
    /* 1. Rule only fires if the record IS already Approved */
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Approved&quot;),
    
    /* 2. List the &apos;Frozen&apos; fields. If ANY of these change, trigger the error */
    OR(
        ISCHANGED(Regular_Bill_Rate__c),
        ISCHANGED(Regular_Pay_Rate__c),
        ISCHANGED(Start_Date__c),
        ISCHANGED(End_Date__c),
        ISCHANGED(Placement__c),
        ISCHANGED(Candidate__c)
    )
)</errorConditionFormula>
    <errorMessage>LOCKED RECORD: This Deal Sheet has already been Approved. Financial rates and Start/End dates cannot be modified. To make changes, please contact the Finance Director to revert the status to Draft.</errorMessage>
</ValidationRule>